--- a/vue/package.json
+++ b/vue/package.json
@@ -12,23 +12,26 @@
   "dependencies": {
     "axios": "^0.21.1",
     "core-js": "^3.9.1",
+    "mapbox-gl": "^0.53.1",
     "vue": "^2.6.12",
+    "vue-mapbox": "^0.4.1",
     "vue-router": "^3.5.1",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
+    "@types/mapbox-gl": "^2.7.10",
     "@vue/cli-plugin-babel": "^4.5.11",
     "@vue/cli-plugin-e2e-cypress": "^4.5.11",
     "@vue/cli-plugin-eslint": "^4.5.11",
     "@vue/cli-plugin-unit-mocha": "^4.5.11",
-    "vue-loader-v16": "npm:vue-loader@16.1.2",
     "@vue/cli-service": "^4.5.11",
     "@vue/test-utils": "1.1.3",
     "babel-eslint": "^10.0.1",
     "chai": "^4.3.3",
+    "cypress": "8.2.0",
     "eslint": "^7.21.0",
     "eslint-plugin-vue": "^7.7.0",
-    "cypress": "8.2.0",
+    "vue-loader-v16": "npm:vue-loader@16.1.2",
     "vue-template-compiler": "^2.6.12"
   }
 }
